# util-uwb-dataset

./: .gitignore  README.md  _config.yml  animation.py  bagTojson.py  frame.py  index.md  setupscript.bash
1_setup_information/anchor_mount/: anchorStand_3arms.STL
2_data/sd-card-data/: 0422-log00  0422-log01  0422-log02  0422-log03  UWB-eventlog01  UWB-eventlog02  UWB-eventlog03  cfBolt-log00  test-log00
2_data/survey-results/: 0426_constellation_full.txt  2104_uwb.txt  anchor_0425.txt  anchor_0611.txt
3_scripts/: raw_tdoa_visual.py  sensor_visualize.py  uwb_tdoa_bias.py  visual-uwb.py  visual_obs.py
3_scripts/estimation/: eskf.py
3_scripts/nlos-data-process/: nlos_fitting.py  nlos_test_visual.py  test.py
3_scripts/sdcard_to_bag/: log_to_bag.py
3_scripts/survey/: AnchorSurvey.py  anchor_0425.npz  anchor_0426.npz  anchor_0612.npz  anchor_survey.py  survey_util.py  util.py
Dataset/sd-card-data/: CF_functions.py  readme
Dataset/survey-results/: anchor_0607.txt
_layouts/: default.html
assets/css/: style.scss
dataset/scripts/: readme.txt
dataset/survey-results/: anchor_const1.txt
obs_traj_t5/: drone.json  drone_toda2_traj2.json  drone_toda2_traj3.json  drone_toda3_traj1.json  drone_toda3_traj2.json  drone_toda3_traj3.json  obs.json  tdoa2_traj2.json  tdoa2_traj3.json  tdoa3_traj1.json  tdoa3_traj2.json  tdoa3_traj3.json
obs_traj_t6/: drone_toda2_traj1.json  drone_toda2_traj2.json  drone_toda2_traj3.json  drone_toda3_traj1.json  drone_toda3_traj2.json  drone_toda3_traj3.json  tdoa2_traj1.json  tdoa2_traj2.json  tdoa2_traj3.json  tdoa3_traj1.json  tdoa3_traj2.json  tdoa3_traj3.json
ros_ws/: eskf.rviz
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/src/: CMakeLists.txt
ros_ws/src/cf_msgs/: CMakeLists.txt  package.xml
rosbag/: sensor_visualize.py
scripts/: log_to_bag.py  radio_offset.py  readme.txt
scripts/estimation/: eskf_class.py  eskf_util.py  main.py  plot_util.py
scripts/flight-dataset/: dec_visual_obs.py  test_visual_exp.py  test_visual_los_exp.py  (+17 more)
sd-card-data/: UWB-eventlog00  plot_events.py
(+540 files in other folders)
